// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onChange clears result event if not touched yet 1`] = `
Array [
  Array [
    Object {
      "fieldName": "fieldName",
      "payload": "updated",
      "type": "updateValue",
    },
  ],
  Array [
    Object {
      "fieldName": "fieldName",
      "payload": Object {
        "error": false,
        "helperText": "",
      },
      "type": "validationResult",
    },
  ],
]
`;

exports[`onChange coerces value using normalize 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": "normalized value",
    "type": "updateValue",
  },
]
`;

exports[`onChange dispatches change action 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": "updated",
    "type": "updateValue",
  },
]
`;

exports[`onChange dispatches validation result if "touched" 1`] = `
Array [
  Array [
    Object {
      "fieldName": "fieldName",
      "payload": "updated",
      "type": "updateValue",
    },
  ],
  Array [
    Object {
      "fieldName": "fieldName",
      "payload": Object {
        "error": false,
        "helperText": undefined,
      },
      "type": "validationResult",
    },
  ],
]
`;

exports[`onChange does not dispatch validation result until "touched" 1`] = `
Array [
  Array [
    Object {
      "fieldName": "fieldName",
      "payload": "updated",
      "type": "updateValue",
    },
  ],
]
`;

exports[`onChange uses valueFromChange to coerce value if provided 1`] = `
Array [
  Object {
    "fieldName": "fieldName",
    "payload": "updatedFromTarget",
    "type": "updateValue",
  },
]
`;

exports[`onChange validates on change 1`] = `
Array [
  "updated",
  "fieldName",
  "getAllValuesFunc",
]
`;

exports[`returns all props needed 1`] = `
Object {
  "meta": Object {
    "pristine": true,
    "touched": false,
  },
  "props": Object {
    "error": false,
    "helperText": "the help",
    "label": "the label",
    "onBlur": [Function],
    "onChange": [Function],
    "value": "the value",
  },
  "setValue": [Function],
}
`;

exports[`validate calls validate on change 1`] = `
Array [
  "1",
  "fieldName",
  "getAllValuesFunc",
]
`;

exports[`validate calls validate on number change with 0 (falsy) 1`] = `
Array [
  0,
  "fieldName",
  "getAllValuesFunc",
]
`;

exports[`validate validates onBlur 1`] = `
Array [
  "the value",
  "fieldName",
  "getAllValuesFunc",
]
`;
